# playground

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  playground.py  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  release.yml  tests.yml
api/: index.html
docs/: api.md  examples.md  index.md  requirements.txt
examples/: index.html
playground/: __init__.py  playground.py
search/: search_index.json
tests/: test_function.py
