[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "playground"
authors = [{name = "Patrick Elmer", email = "patrick@elmer.ws"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'",
    "tomli_w",
]

[project.optional-dependencies]
dev = [
  'pytest >= 6.1.1',
  'mkdocstrings[python]',
  'mkdocs-include-markdown-plugin',
]

[tool.pytest.ini_options]
pythonpath = ["playground"]
